r84 (29. 09. 2022):
Added "Show Escape Chance" option
Added option to show Trophies and Daily Side Jobs
Achievement related options are now under "Unlockables" menu - Trophy and Daily Side Jobs options are there too
Bloodthirst Buff: Fixed an issue where buff's progress is always full when you are still stacking kills
Loot Counter: Fixed an issue where sometimes triggers do not have increase progress or maximum
XP Counter: Fixed a very rare crash when game returned "nil" value instead of a number in how much stealth bonus you accumulated

r83 (21. 09. 2022):
Added trackers for achievements "Field Test", "Heister With A Shotgun" and "Snake Charmer"
Added "Show Bodybags Counter" option

r82 (14. 09. 2022):
Loot Tracker: Added support for variable random loot
Fixed an issue where Crit Chance buff shows "100s" after spawn
Fixed an issue where Dodge Chance buff shows "100s" after spawn
Fixed an issue where "GAGE PACKAGES" popup is visible after sync when a heist does not support them
VR: Fixed trackers not visible
Buluc's Mansion: Fixed achievement trackers not showing up
The Bomb: Forest: Added achievement tracker for "Pump It Up"
Watchdogs Day 1: Added achievement tracker for "Coming in Hot"
Watchdogs Day 2: Fixed an issue where Loot Counter is off by 10 bags

r81 (07. 09. 2022):
Fixed a crash when you switched weapons and both of them have "Reconnaissance Sight"

r80 (30. 08. 2022):
Added "Show Loot Counter" option
Mountain Master: Fixed a load crash when "Show Timers" option is disabled
Menu: Fixed missing string in Skills -> Mastermind
Menu: Fixed missing corner texture

r79 (28. 08. 2022):
Added buff for reload boost duration from Bloodthirst
Added option to enable/disable specific buffs
Added back Piggy Bank tracker as the event was moved to mutators
Fixed an issue where achievements marked as "Show from start" are still visible when achievements are disabled in options