@@ -23,10 +23,10 @@
     "ehi_popup_minion_killed" : "你的变节警察已阵亡",
     "ehi_popup_achievement_failed" : "挑战成就失败！",
     "ehi_popup_achievement_started" : "开始挑战成就!",
-    "ehi_popup_trophy_started" : "TROPHY STARTED!",
-    "ehi_popup_trophy_failed" : "TROPHY FAILED!",
-    "ehi_popup_daily_started" : "DAILY SIDE JOB STARTED!",
-    "ehi_popup_daily_failed" : "DAILY SIDE JOB FAILED!",
+    "ehi_popup_trophy_started" : "开始解锁纪念品!",
+    "ehi_popup_trophy_failed" : "纪念品解锁失败!",
+    "ehi_popup_daily_started" : "开始每日挑战!",
+    "ehi_popup_daily_failed" : "每日挑战失败!",
     "ehi_popup_loot_counter" : "战利品计数器",
     "ehi_popup_all_loot_secured" : "所有战利品已被你收入囊中",
     "ehi_achievement_ok" : "OK",
@@ -98,37 +98,35 @@
     "ehi_show_mission_trackers": "显示任务追踪器",
     "ehi_show_mission_trackers_desc": "显示当前任务目标的追踪器 (例如: 撤离车/飞机抵达时间,距离下一个目标触发时间, 诸如此类。。。)\n\n此选项可兼容自定义劫案\n如果该地图支持EHI",
 
-    "ehi_show_unlockables" : "Show Unlockables",
-    "ehi_show_unlockables_desc" : "Shows on the screen tracker for achievements, trophies and daily mission",
+    "ehi_show_unlockables" : "显示可解锁内容",
+    "ehi_show_unlockables_desc" : "在玩家界面上显示纪念品、安全屋每日挑战、成就等追踪器",
 
-    "ehi_unlockables_menu" : "Unlockables",
+    "ehi_unlockables_menu" : "可解锁内容",
     "ehi_unlockables_menu_desc" : "",
     
     "ehi_show_achievements" : "显示成就追踪器",
     "ehi_show_achievements_desc" : "在屏幕上显示可追踪的成就\n某些劫案中没有可追踪的成就",
 
-    "ehi_show_achievements_mission" : "Show Achievements (Heist)",
-    "ehi_show_achievements_mission_desc" : "Shows achievements that can be completed only in heists",
+    "ehi_show_achievements_mission" : "显示成就 (劫案)",
+    "ehi_show_achievements_mission_desc" : "显示仅限在劫案中完成的成就",
 
-    "ehi_hide_unlocked_achievements" : "Don't Show Unlocked Achievements (Heist)",
-    "ehi_hide_unlocked_achievements_desc" : "When enabled, EHI will not show trackers for unlocked achievements (heist)\nWhen disabled, EHI will show all trackers for achievements (heist)",
-    "ehi_hide_unlocked_achievements_old" : "隐藏已解锁的成就追踪器",
-    "ehi_hide_unlocked_achievements_desc_old" : "勾选后，本模组将隐藏您已经解锁过的成就追踪器\n取消勾选后，本模组依然会为您显示当前所有可用的成就追踪器",
+    "ehi_hide_unlocked_achievements" : "不显示已解锁的成就 (劫案)",
+    "ehi_hide_unlocked_achievements_desc" : "启用后, EHI 将不再显示已完成的仅限在劫案中完成的成就的追踪器\n禁用后, EHI 将显示所有可解锁的仅限在劫案中完成的成就追踪器",
     
-    "ehi_show_achievements_weapon" : "Show Achievements (Weapons)",
-    "ehi_show_achievements_weapon_desc" : "Shows achievements that require you to kill enemies with weapons\n\nThe tracker will not be visible once the achievement is unlocked",
+    "ehi_show_achievements_weapon" : "显示成就 (武器)",
+    "ehi_show_achievements_weapon_desc" : "显示需要你用武器击杀敌人的成就\n\n若完成成就，追踪器将自动隐藏",
 
-    "ehi_show_achievements_melee" : "Show Achievements (Melee)",
-    "ehi_show_achievements_melee_desc" : "Shows achievements that require you to kill enemies with melee\n\nThe tracker will not be visible once the achievement is unlocked",
+    "ehi_show_achievements_melee" : "显示成就 (近战)",
+    "ehi_show_achievements_melee_desc" : "显示需要你用近战武器击杀敌人的成就\n\n若完成成就，追踪器将自动隐藏",
 
-    "ehi_show_achievements_grenade" : "Show Achievements (Throwables)",
-    "ehi_show_achievements_grenade_desc" : "Shows achievements that require you to kill enemies with throwables\n\nThe tracker will not be visible once the achievement is unlocked",
+    "ehi_show_achievements_grenade" : "显示成就 (投掷物)",
+    "ehi_show_achievements_grenade_desc" : "显示需要你用投掷物击杀敌人的成就\n\n若完成成就，追踪器将自动隐藏",
 
-    "ehi_show_achievements_vehicle" : "Show Achievements (Vehicle)",
-    "ehi_show_achievements_vehicle_desc" : "Shows achievements that require you to run over enemies with vehicles\n\nThe tracker will not be visible once the achievement is unlocked",
+    "ehi_show_achievements_vehicle" : "显示成就 (载具)",
+    "ehi_show_achievements_vehicle_desc" : "显示需要你用载具碾压敌人的成就\n\n若完成成就，追踪器将自动隐藏",
 
-    "ehi_show_achievements_other" : "Show Achievements (Other)",
-    "ehi_show_achievements_other_desc" : "Shows achievements that do not belong to any group above\n\nThe tracker will not be visible once the achievement is unlocked",
+    "ehi_show_achievements_other" : "显示成就 (其它)",
+    "ehi_show_achievements_other_desc" : "显示达成条件不属于以上类型的成就\n\n若完成成就，追踪器将自动隐藏",
     
     "ehi_show_achievement_failed_popup" : "显示 '挑战成就失败'提示",
     "ehi_show_achievement_failed_popup_desc" : "在成就条件无法完成时弹出标题为红色字体的窗口提示",
@@ -136,26 +134,26 @@
     "ehi_show_achievement_started_popup" : "显示'开始挑战成就' 弹出窗口",
     "ehi_show_achievement_started_popup_desc" : "正在跟踪的成就会弹出以绿色字体为标题的弹窗",
 
-    "ehi_show_trophies" : "Show Trophies",
-    "ehi_show_trophies_desc" : "Shows trophies on the screen\nSome heists may not have any trophies available",
+    "ehi_show_trophies" : "显示纪念品",
+    "ehi_show_trophies_desc" : "在界面上显示安全屋的纪念品解锁追踪器\n有些劫案可能没有任何可进行解锁的纪念品",
 
-    "ehi_hide_unlocked_trophies" : "Don't Show Unlocked Trophies",
-    "ehi_hide_unlocked_trophies_desc" : "When enabled, EHI will not show trackers for unlocked trophies\nWhen disabled, EHI will show all trackers for trophies",
+    "ehi_hide_unlocked_trophies" : "不显示已解锁的挑战",
+    "ehi_hide_unlocked_trophies_desc" : "启用后，EHI将不再显示已解锁的纪念品追踪器\n禁用后, EHI将显示当前所有可进行解锁的纪念品",
 
-    "ehi_show_trophy_failed_popup" : "Show 'Trophy Failed' Popup",
-    "ehi_show_trophy_failed_popup_desc" : "Failed trophies will show as red in the popup",
+    "ehi_show_trophy_failed_popup" : "显示 '纪念品解锁失败' 弹出窗口",
+    "ehi_show_trophy_failed_popup_desc" : "解锁纪念品失败后会弹出主题为红色的窗口",
 
-    "ehi_show_trophy_started_popup" : "Show 'Trophy Started' Popup",
-    "ehi_show_trophy_started_popup_desc" : "Trophies that are now being tracked will show as green in the popup",
+    "ehi_show_trophy_started_popup" : "显示'开始解锁纪念品' 弹出窗口",
+    "ehi_show_trophy_started_popup_desc" : "开始解锁纪念品后会弹出主题为绿色的窗口",
 
-    "ehi_show_dailies" : "Show Daily Side Jobs",
-    "ehi_show_dailies_desc" : "Shows dailies on the screen if the are active\n\nCompleted dailies won't appear on the screen",
+    "ehi_show_dailies" : "显示每日挑战",
+    "ehi_show_dailies_desc" : "当有可进行的每日挑战时会在界面上显示\n\n已经完成的每日挑战将不会显示",
 
-    "ehi_show_daily_failed_popup" : "Show 'Daily Side Job Failed' Popup",
-    "ehi_show_daily_failed_popup_desc" : "Failed dailies will show as red in the popup",
+    "ehi_show_daily_failed_popup" : "显示 '每日挑战失败' 弹出窗口",
+    "ehi_show_daily_failed_popup_desc" : "每日挑战失败时将弹出主题为红色的窗口",
 
-    "ehi_show_daily_started_popup" : "Show 'Daily Side Job Started' Popup",
-    "ehi_show_daily_started_popup_desc" : "Dailies that are now being tracked will show as green in the popup",
+    "ehi_show_daily_started_popup" : "显示 '开始每日挑战' 弹出窗口",
+    "ehi_show_daily_started_popup_desc" : "开始每日跳槽时将弹出主题为绿色的窗口",
     
     "ehi_show_gained_xp" : "显示获得的经验",
     "ehi_show_gained_xp_desc" : "显示当前获得的经验\n此追踪器将在罪无止境模式下禁用",
@@ -306,8 +304,8 @@
     "ehi_show_bodybags_counter" : "显示尸体袋追踪器",
     "ehi_show_bodybags_counter_desc" : "显示你当前持有尸体袋数量追踪器",
 
-    "ehi_show_escape_chance" : "Show Escape Chance",
-    "ehi_show_escape_chance_desc" : "Shows a tracker with possible escape chance",
+    "ehi_show_escape_chance" : "显示撤离关追踪器",
+    "ehi_show_escape_chance_desc" : "显示出现撤离关概率的追踪器",
     
     "ehi_waypoints_menu" : "路径导航",
     "ehi_waypoints_menu_desc" : "",
